Avances de manejo de errores

--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -94,12 +94,12 @@
                             <option value="" disabled selected>Seleccione una opción</option>
                             <option value="Jardineria">Jardineria</option>
                             <option value="Construccion">Construcción</option>
-                            <option value="Riego">Riego residecial</option>
-                            <option value="Limpieza">Limpieza industrial</option>
+                            <option value="Riego">Riego Residencial</option>
+                            <option value="Limpieza">Limpieza Industrial</option>
                         </select>
 
                         <p style="color: white;">Leyenda de privacidad de los datos del usuarios</p>
-                        <div id="captcha" class="g-recaptcha" data-sitekey="6LfOmVopAAAAAP_8mAZGzB176NlSAsaztCQhMSOP"></div>
+                        <div id="captcha" class="g-recaptcha" data-sitekey="6LfOmVopAAAAAP_8mAZGzB176NlSAsaztCQhMSOP"></div> 
                     </section>
                     <div id="cont_btn"><button id="btn_enviar">Enviar</button></div>
                 </form>
